Reorganize files for Grunt. Add files to gitignore. Grunt runs w/o error

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ _site
 public
 node_modules
 src/assets/javascripts/bundle.js
+src/assets/production/stylesheets/main.min.css
+src/assets/development/stylesheets/main.css
+src/assets/development/stylesheets/main.css.map
